@@ -147,7 +147,6 @@ X(RD_DATA)
 X(RD_EN)
 X(RD_PORTS)
 X(RD_TRANSPARENCY_MASK)
-X(RD_TRANSPARENT)
 X(reg)
 X(S)
 X(SET)
@@ -199,7 +198,6 @@ X(to_delete)
 X(top)
 X(TRANS_NUM)
 X(TRANSPARENCY_MASK)
-X(TRANSPARENT)
 X(TRANS_TABLE)
 X(T_RISE_MAX)
 X(T_RISE_MIN)
